# AVR-VMC-Status-Module

./: Dockerfile  README.md  package-lock.json  pyproject.toml
.github/workflows/: build.yml
src/: config.py  status.py
tests/: conftest.py  test_status.py
