[tool.poetry]
    name        = "bell-avr-vmc-status-module"
    version     = "0.1.0"
    description = "Status LED module for Bell AVR"
    license     = "MIT"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/AVR-VMC-Status-Module"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]

[tool.poetry.dependencies]
    python                              = ">=3.9,<3.13"
    adafruit-circuitpython-neopixel-spi = "1.0.8"
    loguru                              = "0.7.2"
    bell-avr-libraries                  = "0.2.0a7"
    # https://github.com/NVIDIA/jetson-gpio/issues/79
    jetson-gpio = { version = "!=2.1.0", markers = "sys_platform == 'linux'" }

[tool.poetry.group.dev.dependencies]
    pre-commit  = "3.5.0"
    pytest-cov  = "4.1.0"
    pytest      = "7.4.3"
    pytest-mock = "3.12.0"

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true
